--- a/day2.ipynb
+++ b/day2.ipynb
@@ -125,45 +125,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{0: 'a', 1: 'b', 2: 'c', 3: 'b', 4: 'b', 5: 's', 6: 's', 7: 'd', 8: 'v', 9: 'b'}\n",
-      "i: 0 \tv: a\n",
-      "i: 1 \tv: b\n",
-      "i: 2 \tv: c\n",
-      "i: 3 \tv: b\n",
-      "if true: \n",
-      " v: b \ti: 3\n",
-      "\t\ts: 0\n",
-      "\t\ts_update: 2\n",
-      "i: 4 \tv: b\n",
-      "if true: \n",
-      " v: b \ti: 4\n",
-      "\t\ts: 2\n",
-      "\t\ts_update: 4\n",
-      "i: 5 \tv: s\n",
-      "i: 6 \tv: s\n",
-      "if true: \n",
-      " v: s \ti: 6\n",
-      "\t\ts: 4\n",
-      "\t\ts_update: 6\n",
-      "i: 7 \tv: d\n",
-      "i: 8 \tv: v\n",
-      "i: 9 \tv: b\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "4"
+       "3"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,58 +143,37 @@
     "def lengthoflongestsubstring(st):\n",
     "    s,m=0,0\n",
     "    d={}\n",
-    "    print(dict(enumerate(st)))\n",
     "    for i,v in enumerate(st):\n",
-    "        print('i:',i,'\\tv:',v)\n",
     "        if v in d and s <= d[v]:\n",
-    "            print('if true: \\n v:',v,'\\ti:',i)\n",
-    "            print('\\t\\ts:',s)\n",
     "            s=d[v]+1\n",
-    "            print('\\t\\ts_update:',s)\n",
     "        else:\n",
     "            m=max(m,i-s+1)\n",
     "        d[v]=i\n",
     "    return m\n",
     "\n",
-    "lengthoflongestsubstring('abcbbssdvb')"
+    "lengthoflongestsubstring(\"pwwkew\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "{'a': 0}\n",
-      "2\n",
-      "{'a': 0, 'b': 1}\n",
-      "3\n",
-      "{'a': 0, 'b': 1, 'c': 2}\n",
-      "{'a': 3, 'b': 1, 'c': 2}\n",
-      "{'a': 3, 'b': 4, 'c': 2}\n",
-      "{'a': 3, 'b': 4, 'c': 5}\n",
-      "{'a': 3, 'b': 6, 'c': 5}\n",
-      "{'a': 3, 'b': 7, 'c': 5}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "s=\"abcabcbb\"\n",
+    "st=\"abcabcbb\"\n",
     "d={}\n",
-    "m=0\n",
-    "for i,v in enumerate(s):\n",
-    "    if v in d:\n",
-    "        pass\n",
-    "    else:\n",
-    "        m+=1\n",
-    "        print(m)\n",
-    "    d[v]=i\n",
-    "    print(d)\n",
-    "    "
+    "s,m=0,0\n",
+    "def lengthOfLongestSubstring(st):\n",
+    "    for i,v in enumerate(st):\n",
+    "        if v in d and s <= d[v]:\n",
+    "            s = d[v] + 1\n",
+    "        else:\n",
+    "            max(m,i-s+1)\n",
+    "            print('m',m)\n",
+    "        d[v]=i\n",
+    "        \n",
+    "    return m\n",
+    "        "
    ]
   }
  ],
