--- a/day3.ipynb
+++ b/day3.ipynb
@@ -29,10 +29,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<built-in method values of dict object at 0x0000011B2EAF3B00>\n"
+     ]
+    }
+   ],
+   "source": [
+    "s='abbd'\n",
+    "n=len(s)\n",
+    "comb =[]\n",
+    "def longestPalindrome(s):\n",
+    "    for i in range(n-1):\n",
+    "        comb.append(s[i])\n",
+    "\n",
+    "        \n",
+    "longestPalindrome(s=s)"
+   ]
   },
   {
    "cell_type": "code",
