--- a/day5.ipynb
+++ b/day5.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,19 +32,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "bb 2\n"
+      "a\n",
+      "0 0\n",
+      "-1 1\n",
+      "1 1\n",
+      "0 2\n",
+      "2 2\n",
+      "1 3\n",
+      "a 1\n"
      ]
     }
    ],
    "source": [
-    "s=\"cbba\"\n",
+    "s=\"abb\"\n",
     "m=0\n",
     "res=''\n",
     "if len(s)%2 != 0: # odd length\n",
@@ -52,10 +59,13 @@
     "        l=r=i\n",
     "        while( l>=0 and r<len(s) and s[l]==s[r]) :\n",
     "            if len(s[l:r+1])>m:\n",
+    "                print(s[l:r+1])\n",
     "                m= len(s[l:r+1])\n",
     "                res = s[l:r+1]\n",
+    "            print(l,r)\n",
     "            l-=1\n",
     "            r+=1\n",
+    "            print(l,r)\n",
     "    if m==0:\n",
     "        res=s[0]\n",
     "else:\n",
@@ -78,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -103,6 +113,51 @@
     "\n",
     "\n",
     "print(res,m)   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "result:  bb\n"
+     ]
+    }
+   ],
+   "source": [
+    "s=\"abb\"\n",
+    "def longestPalindrome(s):\n",
+    "    if len(s) == 1:\n",
+    "        return s\n",
+    "    res=''\n",
+    "    m=0\n",
+    "    for i in range(len(s)):\n",
+    "        l,r=i,i\n",
+    "        while(l>=0 and r<len(s) and s[l]==s[r]):\n",
+    "            if r-l+1>m:\n",
+    "                m= r-l+1\n",
+    "                res = s[l:r+1]\n",
+    "            l-=1\n",
+    "            r+=1\n",
+    "    for i in range(len(s)):\n",
+    "        l,r=i,i+1\n",
+    "        while(l>=0 and r<len(s) and s[l]==s[r]):\n",
+    "            if r-l+1>m:\n",
+    "                m= r-l+1\n",
+    "                res = s[l:r+1]\n",
+    "            l-=1\n",
+    "            r+=1\n",
+    "\n",
+    "    return print('result: ',res)\n",
+    "\n",
+    "longestPalindrome(s)\n",
+    "\n",
+    "\n",
+    "        "
    ]
   },
   {
