--- a/day10.ipynb
+++ b/day10.ipynb
@@ -65,7 +65,23 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def binarySearch(arr, l, r, x):\n",
+    "\twhile l <= r:\n",
+    "\t\tmid = l + (r - l) // 2\n",
+    "\t\t# Check if x is present at mid\n",
+    "\t\tif arr[mid] == x:\n",
+    "\t\t\treturn mid\n",
+    "\t\t# If x is greater, ignore left half\n",
+    "\t\telif arr[mid] < x:\n",
+    "\t\t\tl = mid + 1\n",
+    "\t\t# If x is smaller, ignore right half\n",
+    "\t\telse:\n",
+    "\t\t\tr = mid - 1\n",
+    "\t# If we reach here, then the element\n",
+    "\t# was not present\n",
+    "\treturn -1\n"
+   ]
   }
  ],
  "metadata": {
